--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,30 @@ h1, h2, h3 {
   max-width: 400px;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
+#discord {
+  margin: auto;
+  background-color: grey;
+  border-radius: 3px;
+  max-width: 400px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+#discord img {
+  padding: 20px;
+  margin: auto;
+}
+
+#discord p {
+  padding: 10px;
+  margin: auto;
+}
+
 #grid-about {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
