--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,18 @@ h1, h2, h3 {
   max-width: 400px;
 }
 
+.notice {
+  padding: 10px;
+  border: 4px double white;
+  background: darkgreen;
+  margin: 20px auto;
+  max-width: 600px;
+}
+
+.mono {
+  font-family: "Lucida Console", Courier, monospace;
+}
+
 a {
   color: white;
   text-decoration: none;
