--- a/styles/main.css
+++ b/styles/main.css
@@ -90,7 +90,7 @@ main > section::after {
   margin-bottom: 20px;
 }
 
-/* 
+/*
  * This is a pretty fancy CSS rule, but basically what it does is create a
  * horizontal line across the bottom of each section in the What We Do section.
  */
@@ -107,9 +107,26 @@ main > section::after {
   margin-bottom: 20px;
 }
 
+#whatwedo > section > p {
+  max-width: 720px;
+  margin: 0 auto;
+}
+
 .infogrid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   column-gap: 20px;
   row-gap: 20px;
+}
+
+.videolibrary > div {
+  width: 560px;
+  margin: 20px auto;
+}
+
+.circled {
+  display: block;
+  width: 300px;
+  height: 300px;
+  border-radius: 150px;
 }
